force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <description>This object manages the annual allocation of leave days for each employee, broken down by leave type. It serves as the &quot;source of truth&quot; for current leave balances.</description>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>LBA-{00000}</displayFormat>
        <label>Balance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>