force-app/main/default/objects/Leave_Balance__c/fields/Allocated_Days__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Days__c</fullName>
    <description>The total number of days allocated for this leave type and year.</description>
    <label>Allocated Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>