force-app/main/default/objects/Leave_Balance__c/fields/Is_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Year__c</fullName>
    <formula>YEAR(TODAY()) = Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Year</label>
    <type>Checkbox</type>
</CustomField>