force-app/main/default/objects/Leave_Balance__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>This should align with the Leave Type values in the Leave Request object.</description>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Leave</fullName>
            </value>
            <value>
                <fullName>RTT</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>