force-app/main/default/objects/Leave_Balance__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <description>Allocated Days - Used Days. This calculates the current available balance.</description>
    <formula>Allocated_Days__c - Used_Days__c</formula>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>