force-app/main/default/objects/Leave_Balance__c/fields/Used_Days__c.field-meta.xml
<CustomField>
    <fullName>Used_Days__c</fullName>
    <label>Used Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>