force-app/main/default/objects/Leave_Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>